<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/iv_newSMS"
        android:gravity="right|center_vertical"
        android:paddingBottom="3dp"
        android:text="@string/add_new_group"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/message_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/iv_contact"
        android:gravity="right|center_vertical"
        android:paddingBottom="3dp"
        android:text="@string/nav_group_message"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/iv_bank"
        android:gravity="right|center_vertical"
        android:paddingBottom="3dp"
        android:text="@string/nav_status"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:textSize="13dp" />


    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/iv_logOut"
        android:gravity="right|center_vertical"
        android:paddingBottom="3dp"
        android:text="@string/nav_setting"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:textSize="13dp" />

</LinearLayout>
