<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp">


    <TextView
        android:id="@+id/cancel_massage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right|center_vertical"
        android:paddingBottom="3dp"
        android:text="@string/cancel_message"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

        <Button
            android:id="@+id/cancel_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

    </LinearLayout>


</LinearLayout>
