<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:textSize="40sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout3">

            <EditText
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="right"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/AppTheme3" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout3">

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="right"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/AppTheme3" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/log_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_radius"
            android:text="@string/login_btn"
            android:textColor="@color/colorBlue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/create"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/register"
                android:textColor="@color/colorYellow"
                android:textSize="15sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/remember_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/remember"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/colorWhite"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>