<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorBlack1"
    android:orientation="horizontal"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/navigation_contacts"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/title_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/title_contacts"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_chats"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat_outline" />

        <TextView
            android:id="@+id/title_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/title_chats"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_groups"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_users_outline" />

        <TextView
            android:id="@+id/title_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/title_groups"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_outline" />

        <TextView
            android:id="@+id/title_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/title_home"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
